--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ dark-theme: auto
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://drive.google.com/file/d/1a7PBcbHrSed7CHjbn4dd-VEeChjL96B4/view
 
-url: https://sergiokopplin.github.io/indigo
-# your url: https://USERNAME.github.io
+# url: https://sergiokopplin.github.io/indigo
+your url: https://kjrosendahl.github.io
 
 permalink: /:title/
 
