--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # main text of home
 title: Kaylee Rosendahl
-bio: A Person who travels the world eating noodles
+bio: You can't ever reach perfection, but you can believe in an asymptote towards which you are ceaselessly striving.
 
-# twitter summary info
+# summary info
 description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
@@ -34,26 +34,20 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-instagram: myinstagram
-linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+# facebook: myfacebook
+# twitter: mytwitter
+# instagram: myinstagram
+linkedin: kaylee-rosendahl
+github: kjrosendahl
+email: kjrosendahl02@gmail.com
 
 authors:
   johndoe:
-    name: John Doe
+    name: Kaaylee Rosendahl
     bio: A Man who travels the world eating noodles
     external-image: false
     picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+    # twitter: johndoe
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
