--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ disqus:
 linkedin: kaylee-rosendahl
 github: kjrosendahl
 email: kjrosendahl02@gmail.com
+spotify: 7p6vtyrrt3dglpgyvc5gj2zpu?si=6172100f15de4477&nd=1
 
 authors:
   johndoe:
