--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ spotify: 7p6vtyrrt3dglpgyvc5gj2zpu?si=6172100f15de4477&nd=1
 authors:
   johndoe:
     name: Kaaylee Rosendahl
-    bio: A Man who travels the world eating noodles
+    bio: A student looking to travel the world
     external-image: false
     picture: assets/images/profile.jpg
     # twitter: johndoe
