--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 title: Kaylee Rosendahl
-bio: You can't ever reach perfection, but you can believe in an asymptote towards which you are ceaselessly striving.
+bio: "You can't ever reach perfection, but you can believe in an asymptote towards which you are ceaselessly striving | Paul Kalanithi" 
 
 # summary info
 description: A blog about technology and stuff related
@@ -69,6 +69,7 @@ projects: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+activities: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
