--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ permalink: /:title/
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: github # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+  categories: [] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
@@ -43,8 +43,8 @@ email: kjrosendahl02@gmail.com
 spotify: 7p6vtyrrt3dglpgyvc5gj2zpu?si=6172100f15de4477&nd=1
 
 authors:
-  johndoe:
-    name: Kaaylee Rosendahl
+  kjros:
+    name: Kaylee Rosendahl
     bio: A student looking to travel the world
     external-image: false
     picture: assets/images/profile.jpg
