--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ show-tags: true
 related: true
 
 # Display links for next and previous posts for the specified categories
-post-advance-links: [blog, potpourri, projects]
+post-advance-links: [blog, potpourri, projects, activities]
 
 # show author block at the end of a post ?
 show-author: true
