add middle initial

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-title: Kaylee Rosendahl
+title: Kaylee J. Rosendahl
 bio: "You can't ever reach perfection, but you can believe in an asymptote towards which you are ceaselessly striving | Paul Kalanithi" 
 
 # summary info
@@ -46,7 +46,7 @@ letterboxd: kjrosendahl
 
 authors:
   kjros:
-    name: Kaylee Rosendahl
+    name: Kaylee J. Rosendahl
     bio: Searching for that asymptote
     external-image: false
     picture: assets/images/profile.jpg
