--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Kaylee J. Rosendahl
 bio: "You can't ever reach perfection, but you can believe in an asymptote towards which you are ceaselessly striving | Paul Kalanithi" 
 
 # summary info
-description: A blog about technology, math, and travel
+description: A blog about math, travel, and my life
 
 # if it's an external image, update below for true
 # better with square images
