--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ projects: true
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
-activities: true
+# activities: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
