--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ github: kjrosendahl
 email: kjrosendahl02@gmail.com
 spotify: 7p6vtyrrt3dglpgyvc5gj2zpu?si=6172100f15de4477&nd=1
 letterboxd: kjrosendahl
-belli: kjrosendahl
+beli: kjrosendahl
 
 
 authors:
